
SUBDIRS = lib rpc_gen sol

# bin_PROGRAMS = bin/crpc_gen sole
# AM_CPPFLAGS = -I../include
# 
# bin_crpc_gen_SOURCES = rpc_gen/crpc_gen.cc
# bin_crpc_gen_LDFLAGS = -lprotobuf -lprotoc 
# 
# lib_LTLIBRARIES = bin/libliq.la
# bin_libliq_la_SOURCES = lib/io.cc  lib/liq.cc  lib/module.cc  lib/rpc.cc  lib/service.cc  lib/thread_pool.cc
# bin_libliq_la_CPPFLAGS =  $(AM_CPPFLAGS) -I/home/ezfun/server/frame/src/common/autogen/ \
# 					  -I/home/ezfun/server/frame/src/comm/shm_channel
# bin_libliq_la_LDFLAGS = -lprotobuf -lprotoc -lboost_filesystem -L/home/ezfun/server/frame/src/comm/shm_channel/ -lshmchannel
# 
# sole_SOURCES = sol/command_line.cc sol/sol.cc
# sole_LDADD = bin/libliq.la
# sole_LDFLAGS = 



